<resources>
    <string name="app_name">Noto</string>
    <string name="apply">Apply</string>
    <string name="okay">Okay</string>
    <string name="search">Search</string>
    <string name="find_in_note">Find in note</string>
    <string name="support_noto">Support Noto</string>
    <string name="support_noto_description">If you\'d like to make sure Noto remains maintained.</string>
    <string name="more_options">More options</string>
    <string name="options">Options</string>
    <string name="back">Back</string>
    <string name="filtering">Filtering</string>
    <string name="layout">Layout</string>
    <string name="list">List</string>
    <string name="inclusive">Inclusive</string>
    <string name="inclusive_description">Filter notes that have <b>any</b> of the selected labels.</string>
    <string name="exclusive">Exclusive</string>
    <string name="exclusive_description">Filter notes that have <b>all</b> the selected labels, nothing less.</string>
    <string name="strict">Strict</string>
    <string name="strict_description">Filter notes that have <b>only</b> the selected labels, nothing less, nothing more.</string>
    <string name="grid">Grid</string>
    <string name="created">Created %s</string>
    <string name="accessed">Accessed %s</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="access_date">Access date</string>
    <string name="creation_date">Creation date</string>
    <string name="manual">Manual</string>
    <string name="none">None</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="settings">Settings</string>
    <string name="source_code">Source code</string>
    <string name="source_code_description">Noto is an open-source application, and the code is published on GitHub.</string>
    <string name="telegram_community">Telegram community</string>
    <string name="telegram_community_description">Join the community to engage with other Noto users, and get the latest news.</string>
    <string name="join_telegram">Join The Telegram Community!</string>
    <string name="notes_font">Notes font</string>
    <string name="share_app_with_others">Share Noto with others</string>
    <string name="rate_app_on_play_store">Rate Noto on Play Store</string>
    <string name="report_issue">Report an issue</string>
    <string name="email">Email</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="about">About</string>
    <string name="whats_new">What\'s new</string>
    <string name="whats_new_in">What\'s new in %s</string>
    <string name="learn_more">Learn more…</string>
    <string name="export_import_data">Export/Import data</string>
    <string name="exporting_failed">Failed to export the data.</string>
    <string name="importing_failed">Failed to import the data.</string>
    <string name="data_is_exported">Data has been exported to %s</string>
    <string name="data_is_imported">Data has been imported.</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="importing_data">Importing data…</string>
    <string name="exporting_data">Exporting data…</string>
    <string name="create_file_failed">Failed to create a file.</string>
    <string name="no_folder_is_selected">No folder has been selected.</string>
    <string name="no_file_is_selected">No file has been selected.</string>
    <string name="open_with">Open with</string>
    <string name="invite_text">Check out Noto, a minimal open-source note-taking application.</string>
    <string name="version">Version</string>
    <string name="version_is_copied">Version has been copied to clipboard.</string>
    <string name="developer">Developer</string>
    <string name="creator">Creator</string>
    <string name="creator_name" translatable="false">Geoffrey Crofte</string>
    <string name="app_icons">App Icons</string>
    <string name="app_icons_value" translatable="false">Collections of Gradients</string>
    <string name="developer_name" translatable="false">Ali Albaali</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_description">Last updated on August 25, 2022.</string>
    <string name="license">License</string>
    <string name="license_value" translatable="false">Apache License 2.0</string>
    <string name="app_icons_license_value" translatable="false">CC BY 4.0</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="drag">Drag</string>
    <string name="nunito">Nunito (default)</string>
    <string name="monospace">Monospace</string>
    <string name="folders_archive">Folders archive</string>
    <string name="main_interface">Main interface</string>
    <string name="main_interface_description">The first screen displayed when launching the app.</string>
    <string name="quick_note_folder">Quick Note folder</string>
    <string name="quick_note">Quick Note</string>
    <string name="quick_note_folder_description">The default folder when saving a note using \"Quick note\" text selection option.</string>
    <string name="general">General</string>
    <string name="all_notes">All notes</string>
    <string name="all_folders">All folders</string>
    <string name="clear">Clear</string>
    <string name="recent">Recent</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="parent_folder">Parent folder</string>
    <string name="new_note_cursor_position">New note cursor position</string>
    <string name="open_notes_in">Open notes in</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <string name="scheduled">Scheduled</string>
    <string name="folder_archive">%s archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pin">Pin</string>
    <string name="merge">Merge</string>
    <string name="unpin">Unpin</string>
    <string name="delete">Delete</string>
    <string name="just_now">just now</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="translations">Translations</string>
    <string name="translations_description">Special thanks to all the translators who helped make Noto available in different localizations.</string>
    <string name="credits">Credits</string>
    <string name="folders">Folders</string>
    <plurals name="folders_count">
        <item quantity="one">%d Folder</item>
        <item quantity="other">%d Folders</item>
    </plurals>
    <string name="create_folder">Create folder</string>
    <string name="update_folder">Update folder</string>
    <string name="archive_folder">Archive folder</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="folder_options">Folder options</string>
    <string name="add_new_note_shortcut">New note shortcut</string>
    <string name="delete_folder_description">This action can\'t be undone and will delete the folder and all of its content permanently.</string>
    <string name="folder_title">Folder title</string>
    <string name="color">Color</string>
    <string name="delete_folder">Delete</string>
    <string name="delete_folder_confirmation">Are you sure you want to delete this folder?</string>
    <string name="empty_title">Title can\'t be empty.</string>
    <string name="folder_is_deleted">Folder has been deleted.</string>
    <string name="folder_is_archived">Folder has been archived.</string>
    <string name="folder_is_unarchived">Folder has been unarchived.</string>
    <string name="folder_is_pinned">Folder has been pinned.</string>
    <string name="folder_is_unpinned">Folder has been unpinned.</string>
    <string name="no_folders_found">No folders found.</string>
    <string name="no_relevant_folders_found">No relevant folders found.</string>
    <string name="select_folder">Select folder</string>
    <string name="folder">Folder</string>
    <string name="select_folder_archive">Select folder archive</string>
    <string name="pinned">Pinned</string>
    <string name="folders_vault">Folders vault</string>
    <string name="update_passcode">Update passcode</string>
    <string name="enable_vault">Enable vault</string>
    <string name="enter_vault_passcode">Enter vault passcode</string>
    <string name="add_to_vault">Add to vault</string>
    <string name="remove_from_vault">Remove from vault</string>
    <string name="folder_is_vaulted">Folder has been added to the vault.</string>
    <string name="folder_is_unvaulted">Folder has been removed from the vault.</string>
    <string name="vault_is_empty">Vault is empty.</string>
    <string name="archive_vaulted_folder_confirmation">Are you sure you want to archive this folder?</string>
    <string name="archive_vaulted_folder_description">Archiving this folder will also remove it from the vault.</string>
    <string name="passcode">Passcode</string>
    <string name="new_vault_passcode">New vault passcode</string>
    <string name="new_passcode">New passcode</string>
    <string name="current_passcode">Current passcode</string>
    <string name="vault_setup">Vault setup</string>
    <string name="current_vault_passcode">Current vault passcode</string>
    <string name="change_passcode">Change passcode</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_description">The time it takes to close the vault after being opened.</string>
    <string name="vault_timeout">Vault timeout</string>
    <string name="invalid_passcode">Invalid passcode</string>
    <string name="passcode_length_message">Passcode must contain at least 6 numbers</string>
    <string name="passcode_empty_message">Passcode can\'t be empty</string>
    <string name="passcode_doesnt_match">Passcode doesn\'t match the current one</string>
    <string name="vault_passcode_has_changed">Vault passcode has been updated.</string>
    <string name="enable_vault_message">To enable the vault, please provide a passcode.</string>
    <string name="vault_passcode_message">Vault passcode can\'t be changed if you lose it, make sure to store it somewhere safe.</string>
    <string name="use_bio">Use biometrics</string>
    <string name="validate">Validate</string>
    <string name="vault">Vault</string>
    <string name="disable_vault">Disable vault</string>
    <string name="vault_is_disabled">Vault has been disabled.</string>
    <string name="vault_is_enabled">Vault has been enabled.</string>
    <string name="disable">Disable</string>
    <string name="disable_vault_confirmation">Are you sure you want to disable the vault?</string>
    <string name="disable_vault_description">This action can\'t be undone and will disable the vault and move all of the folders outside the vault.</string>
    <string name="vault_is_open">Vault is open</string>
    <string name="immediately">Immediately</string>
    <string name="on_app_close">On app close</string>
    <string name="after_1_hour">After 1 hour</string>
    <string name="after_4_hours">After 4 hours</string>
    <string name="after_12_hours">After 12 hours</string>
    <string name="close_vault">Close vault</string>
    <string name="bio_auth">Enable biometric authentication</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="editor">Editor</string>
    <string name="share_with">Share with…</string>
    <string name="add_note_reminder">Add reminder</string>
    <string name="reading_mode">Reading Mode</string>
    <string name="note_preview_size">Note preview size</string>
    <string name="show_note_creation_date">Show note creation date</string>
</resources>