<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/unarchive"
        android:icon="@drawable/ic_round_unarchive_24"
        android:contentDescription="@string/unarchive"
        android:title="@string/unarchive"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_round_delete_24"
        android:contentDescription="@string/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/change_visibility"
        android:icon="@drawable/ic_round_expand_24"
        android:contentDescription="@string/expand"
        android:title="@string/expand"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>