<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/archive"
        android:contentDescription="@string/archive"
        android:icon="@drawable/ic_round_inventory_24"
        android:title="@string/archive"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/more"
        android:contentDescription="@string/folder_options"
        android:icon="@drawable/ic_round_more_24"
        android:title="@string/folder_options"
        app:showAsAction="always" />

</menu>