<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tb"
            layout="@layout/dialog_fragment_toolbar" />

        <RadioGroup
            android:id="@+id/rg_vault_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_immediately"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/immediately" />

            <RadioButton
                android:id="@+id/rb_on_app_close"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_app_close" />

            <RadioButton
                android:id="@+id/rb_after_1_hour"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/after_1_hour" />

            <RadioButton
                android:id="@+id/rb_after_4_hours"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/after_4_hours" />

            <RadioButton
                android:id="@+id/rb_after_12_hours"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/after_12_hours" />
        </RadioGroup>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>