<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_normal">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tb"
            layout="@layout/dialog_fragment_toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_confirmation"
            android:background="@drawable/generic_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:textColor="?attr/notoPrimaryColor"
            android:textSize="@dimen/size_small"
            android:text="@string/enable_vault_message" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_current_passcode"
            style="@style/DialogSectionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_normal"
            android:text="@string/current_vault_passcode" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_current_passcode"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/notoSecondaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_current_passcode"
                style="@style/TextInputEditText"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/current_passcode"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_new_vault_passcode"
            style="@style/DialogSectionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_normal"
            android:text="@string/new_vault_passcode" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_passcode"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/notoSecondaryColor"
            app:helperText="@string/passcode_length_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_passcode"
                style="@style/TextInputEditText"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_passcode"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enable"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:padding="@dimen/spacing_normal"
            android:text="@string/enable_vault" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>