<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/base_dialog_fragment" />

        <RadioGroup
            android:id="@+id/rg_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_manual"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_creation_date"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creation_date" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_alphabetical"
                style="@style/DialogRadioButtonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/alphabetical" />

        </RadioGroup>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>